Removed certain libraries

--- a/STAT301 Grp 26 Project Final.ipynb
+++ b/STAT301 Grp 26 Project Final.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -35,8 +35,18 @@
       "“le package ‘rsample’ a été compilé avec la version R 4.4.3”\n",
       "Warning message:\n",
       "“le package ‘tune’ a été compilé avec la version R 4.4.3”\n",
+      "Mise à jour de la liste HTML des packages dans '.Library'\n",
+      "\n",
+      "Making 'packages.html' ...\n",
+      " terminé\n",
+      "\n",
       "Warning message:\n",
       "“le package ‘Matrix’ a été compilé avec la version R 4.4.3”\n",
+      "Mise à jour de la liste HTML des packages dans '.Library'\n",
+      "\n",
+      "Making 'packages.html' ...\n",
+      " terminé\n",
+      "\n",
       "Mise à jour de la liste HTML des packages dans '.Library'\n",
       "\n",
       "Making 'packages.html' ...\n",
@@ -52,12 +62,10 @@
     "library(haven)    # Loading of .dta, .csv etc. datasets\n",
     "library(tidyverse)\n",
     "library(dplyr)\n",
-    "library(datasets)\n",
-    "library(car)\n",
     "library(corrplot)\n",
     "library(repr)\n",
     "library(tidymodels)\n",
-    "# install.packages(\"stargazer\")      # maybe needed if not installed\n",
+    "install.packages(\"stargazer\")      # maybe needed if not installed\n",
     "library(stargazer)\n",
     "library(modelr)\n",
     "library(broom)\n",
@@ -65,11 +73,10 @@
     "library(GGally)\n",
     "library(leaps)\n",
     "library(glmnet)\n",
-    "# install.packages(\"poissonreg\")\n",
+    "install.packages(\"poissonreg\")\n",
     "library(poissonreg)\n",
-    "# install.packages(\"coefplot\")      # maybe needed if not installed\n",
+    "install.packages(\"coefplot\")      # maybe needed if not installed\n",
     "library(coefplot)\n",
-    "install.packages(\"patchwork\")\n",
     "library(patchwork)\n",
     "})"
    ]
@@ -1829,7 +1836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -1853,6 +1860,8 @@
     }
    ],
    "source": [
+    "# Main Developer: Eaven\n",
+    "\n",
     "# Create a data frame for visualization\n",
     "viz_data <- data.frame(\n",
     "  Actual = market_Y_test,\n",
@@ -2114,17 +2123,6 @@
     "\n",
     "2. Farahat, A., & Bailey, M. C. (2012). How effective is targeted advertising? Proceedings of the 21st International Conference on World Wide Web. https://doi.org/10.1145/2187836.2187852"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
